--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Brewery</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <h1>Super Birrerie Mondiali</h1>
-        <div>
+        <div class="div-buttons">
             <button onclick="next()">Next</button>
             <button onclick="previous()">Previous</button>
+        </div>
+        <div class="main-container">
+
         </div>
     </header>
 </body>
